Concurrent downloading, remove delay to fit within Colab 24hr timelimit

--- a/tools/Image_Downloader.ipynb
+++ b/tools/Image_Downloader.ipynb
@@ -12,18 +12,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "hvZCKmYWIdcO"
       },
       "outputs": [],
       "source": [
-        "! cp /content/drive/MyDrive/UNC/NCBG/qry_fsus_trainingdata_ai.xlsx /content/qry_fsus_trainingdata_ai.xlsx"
+        "! cp /content/drive/MyDrive/UNC/NCBG/qry_fsus_fulllistimg_ai.xlsx /content/qry_fsus_fulllistimg_ai.xlsx"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "! pip install joblib"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FzralhdCaN2M",
+        "outputId": "f6adde92-6d2e-417e-fdc0-7f28050736ad"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (1.1.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "bBBwaZTdIz1S"
       },
@@ -31,7 +55,7 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "image_df = pd.read_excel(\"qry_fsus_trainingdata_ai.xlsx\")"
+        "image_df = pd.read_excel(\"qry_fsus_fulllistimg_ai.xlsx\")"
       ]
     },
     {
@@ -44,27 +68,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8c5NIiMwDk7B",
-        "outputId": "1c14f858-4f1d-46de-a955-fe4e37daf038"
+        "outputId": "4c93e3f5-ba55-4411-bfb9-32ce303befe8"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                     file directory  imagequality  \\\n",
-            "0  justice_slide_0001.jpg       wsj           1.0   \n",
-            "1  justice_slide_0002.jpg       wsj           1.0   \n",
-            "2  justice_slide_0004.jpg       wsj           5.0   \n",
-            "3  justice_slide_0006.jpg       wsj           5.0   \n",
-            "4  justice_slide_0007.jpg       wsj          10.0   \n",
-            "\n",
-            "                          image_context  \n",
-            "0                                   NaN  \n",
-            "1                                   NaN  \n",
-            "2                      aspect;leaf;stem  \n",
-            "3                          flower;fruit  \n",
-            "4  aspect;flower;fruit;leaf;whole-plant  \n"
+            "            filename directoryname priority\n",
+            "0  1413831366460.jpg           gmp       no\n",
+            "1  1413831418011.jpg           gmp       no\n",
+            "2  1413831438890.jpg           gmp       no\n",
+            "3  1413833265035.jpg           gmp       no\n",
+            "4  1413833627833.jpg           gmp       no\n"
           ]
         }
       ]
@@ -79,10 +96,12 @@
         "from collections import defaultdict\n",
         "import io\n",
         "from PIL import Image\n",
+        "from joblib import Parallel, delayed\n",
         "\n",
-        "for idx, row in tqdm(image_df.iterrows(), total=len(image_df)):\n",
-        "  im_bn = row[\"file\"]\n",
-        "  directory = row[\"directory\"]\n",
+        "# for idx, row in tqdm(image_df.iterrows(), total=len(image_df)):\n",
+        "def down_ims(idx, row):\n",
+        "  im_bn = row[\"filename\"]\n",
+        "  directory = row[\"directoryname\"]\n",
         "  im_url = f\"https://fsus.ncbg.unc.edu/img/600/{directory}/{im_bn}\"\n",
         "  path = f\"images/\"\n",
         "\n",
@@ -102,44 +121,44 @@
         "  except:\n",
         "    pass\n",
         "\n",
-        "  time.sleep(0.5)"
+        "Parallel(n_jobs=4)(delayed(down_ims)(idx, row) for idx, row in tqdm(image_df.iterrows(), total=len(image_df)))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "895a96a50be744868b2ff0a5b0053bef",
-            "49a0d7dc248341ef8e54f85ab0fc1c86",
-            "f4d1c2c2b08348a08d7d8eaed082ff1f",
-            "2e514a098a8745a49fb527d959c058e1",
-            "30466dd6c2d443af8774d5d99479363c",
-            "10840f54655841bca6e895f75de92bf7",
-            "62a7834d6cd94b56aef1a6f9253be91e",
-            "a2fa68c7fd4f47d3beb6055ee6c19f6f",
-            "b4245003a6054e44b67fec2555bb3964",
-            "71c2a3701c0c4270af609c0ad41a84fe",
-            "33ed2bc7519a48b58816abbf8e3364fd"
+            "598b9518e490458297d65f5cee7eb175",
+            "369b6199aac94c81acdb6d9446ff7a99",
+            "94b233597446494cbd8728e70de6d324",
+            "ef0e649c65a746078b2b83cda4701dc4",
+            "39e2fa957fa448a18034562770b4bd38",
+            "8443ac0954cf41d0a9462a8df5175386",
+            "8e211b59ebf748ce86bfe9423cd92515",
+            "5f468be26d4e476cb48c9a9c16ec4da8",
+            "562d8819aed1402e88bf9caf0bf3455d",
+            "030e8c1b623f488195ee0dd9b46ae742",
+            "73a4f1f0afe3408593c16e147bcf763a"
           ]
         },
         "id": "OSPWG2b5DgTf",
-        "outputId": "e2b98d50-f78e-4aa9-b7a2-35bebbfbd509"
+        "outputId": "4987954c-7a87-4bfe-e394-d643d50135e8"
       },
       "execution_count": null,
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "895a96a50be744868b2ff0a5b0053bef",
-              "version_major": 2,
-              "version_minor": 0
-            },
             "text/plain": [
-              "  0%|          | 0/8613 [00:00<?, ?it/s]"
-            ]
+              "  0%|          | 0/103333 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "598b9518e490458297d65f5cee7eb175"
+            }
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ]
     },
@@ -147,9 +166,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "By07DMaB4vO2"
       },
       "outputs": [],
@@ -163,14 +179,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "DyeZU2ngtJL3"
       },
       "outputs": [],
       "source": [
-        "! zip -r -q /content/drive/MyDrive/UNC/NCBG/sept1_classif_training.zip /content/images"
+        "! zip -r -q /content/drive/MyDrive/UNC/NCBG/sept12_full_images.zip /content/images"
       ]
     },
     {
@@ -189,7 +202,7 @@
       "machine_shape": "hm",
       "provenance": [],
       "mount_file_id": "1gescfSlO15_0BEpjVXmiJOKWM8Xhclbl",
-      "authorship_tag": "ABX9TyPgUeieEtxOOafwi4VKNjR+",
+      "authorship_tag": "ABX9TyND7Wk76Zbvy4NTdRhai4VZ",
       "include_colab_link": true
     },
     "gpuClass": "standard",
@@ -202,7 +215,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "895a96a50be744868b2ff0a5b0053bef": {
+        "598b9518e490458297d65f5cee7eb175": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -217,14 +230,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_49a0d7dc248341ef8e54f85ab0fc1c86",
-              "IPY_MODEL_f4d1c2c2b08348a08d7d8eaed082ff1f",
-              "IPY_MODEL_2e514a098a8745a49fb527d959c058e1"
+              "IPY_MODEL_369b6199aac94c81acdb6d9446ff7a99",
+              "IPY_MODEL_94b233597446494cbd8728e70de6d324",
+              "IPY_MODEL_ef0e649c65a746078b2b83cda4701dc4"
             ],
-            "layout": "IPY_MODEL_30466dd6c2d443af8774d5d99479363c"
+            "layout": "IPY_MODEL_39e2fa957fa448a18034562770b4bd38"
           }
         },
-        "49a0d7dc248341ef8e54f85ab0fc1c86": {
+        "369b6199aac94c81acdb6d9446ff7a99": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -239,13 +252,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_10840f54655841bca6e895f75de92bf7",
+            "layout": "IPY_MODEL_8443ac0954cf41d0a9462a8df5175386",
             "placeholder": "​",
-            "style": "IPY_MODEL_62a7834d6cd94b56aef1a6f9253be91e",
+            "style": "IPY_MODEL_8e211b59ebf748ce86bfe9423cd92515",
             "value": "  0%"
           }
         },
-        "f4d1c2c2b08348a08d7d8eaed082ff1f": {
+        "94b233597446494cbd8728e70de6d324": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -261,15 +274,15 @@
             "bar_style": "",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_a2fa68c7fd4f47d3beb6055ee6c19f6f",
-            "max": 8613,
+            "layout": "IPY_MODEL_5f468be26d4e476cb48c9a9c16ec4da8",
+            "max": 103333,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_b4245003a6054e44b67fec2555bb3964",
-            "value": 96
+            "style": "IPY_MODEL_562d8819aed1402e88bf9caf0bf3455d",
+            "value": 208
           }
         },
-        "2e514a098a8745a49fb527d959c058e1": {
+        "ef0e649c65a746078b2b83cda4701dc4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -284,13 +297,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_71c2a3701c0c4270af609c0ad41a84fe",
+            "layout": "IPY_MODEL_030e8c1b623f488195ee0dd9b46ae742",
             "placeholder": "​",
-            "style": "IPY_MODEL_33ed2bc7519a48b58816abbf8e3364fd",
-            "value": " 96/8613 [04:12&lt;5:45:44,  2.44s/it]"
+            "style": "IPY_MODEL_73a4f1f0afe3408593c16e147bcf763a",
+            "value": " 208/103333 [01:48&lt;13:58:31,  2.05it/s]"
           }
         },
-        "30466dd6c2d443af8774d5d99479363c": {
+        "39e2fa957fa448a18034562770b4bd38": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -342,7 +355,7 @@
             "width": null
           }
         },
-        "10840f54655841bca6e895f75de92bf7": {
+        "8443ac0954cf41d0a9462a8df5175386": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -394,7 +407,7 @@
             "width": null
           }
         },
-        "62a7834d6cd94b56aef1a6f9253be91e": {
+        "8e211b59ebf748ce86bfe9423cd92515": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -409,7 +422,7 @@
             "description_width": ""
           }
         },
-        "a2fa68c7fd4f47d3beb6055ee6c19f6f": {
+        "5f468be26d4e476cb48c9a9c16ec4da8": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -461,7 +474,7 @@
             "width": null
           }
         },
-        "b4245003a6054e44b67fec2555bb3964": {
+        "562d8819aed1402e88bf9caf0bf3455d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -477,7 +490,7 @@
             "description_width": ""
           }
         },
-        "71c2a3701c0c4270af609c0ad41a84fe": {
+        "030e8c1b623f488195ee0dd9b46ae742": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -529,7 +542,7 @@
             "width": null
           }
         },
-        "33ed2bc7519a48b58816abbf8e3364fd": {
+        "73a4f1f0afe3408593c16e147bcf763a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
